# recursive-segmentation

./: README.md  ex.ipynb  main.py  nb.ipynb  pyproject.toml  requirements.txt
model/: train.py
model/seg/: data.py  dloader.py  imutils.py  rseg.py
segmentor/document/: div.py  pdf.py  scan.py  segment.py
xyseg/document/: image.py  pdf.py  segment.py
